# Modules/Search/routes/api.php
@@ -3,6 +3,4 @@
 use Illuminate\Support\Facades\Route;
 use Modules\Search\Http\Controllers\SearchController;
 
-Route::middleware('jwt.auth')->group(function () {
-    Route::get('search', [SearchController::class, 'search'])->name('search');
-});
+Route::post('search', [SearchController::class, 'search'])->name('search');
